--- a/star-search/src/index.css
+++ b/star-search/src/index.css
@@ -1,3 +1,26 @@
 body {
   text-align: center;
+  background-color: rgb(1, 1, 68);
+  color: rgb(248, 248, 88);
+  background-image: url('https://dumielauxepices.net/sites/default/files/starry-sky-clipart-powerpoint-background-778852-3111525.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
+  background-size: auto 100%;
+}
+ul {
+  list-style-type: none;
+}
+#meteoriteList {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  padding: 2em;
+  margin: auto;
+  border: dotted 2px;
+}
+
+.meteorite {
+  padding: 1em;
 }
