--- a/star-search/src/index.css
+++ b/star-search/src/index.css
@@ -2,30 +2,48 @@ body {
   text-align: center;
   background-color: rgb(1, 1, 68);
   color: rgb(248, 248, 88);
-  background-image: url('https://dumielauxepices.net/sites/default/files/starry-sky-clipart-powerpoint-background-778852-3111525.jpg');
-  background-repeat: no-repeat;
+  background-image: url('http://www.starwarsmonterrey.com/wp-content/uploads/2016/08/tileable-classic-nebula-space-patterns-5.jpg');
+  background-repeat: repeat;
   background-attachment: fixed;
-  background-position: center; 
-  background-size: auto 100%;
 }
 ul {
   list-style-type: none;
 }
-#meteoriteList {
-  background-color: rgba(1, 1, 68, 0.5);
+.meteoriteList {
+  background-color: rgba(6, 13, 107, 0.5);
   display: flex;
   flex-wrap: wrap;
   align-content: center;
   justify-content: center;
   padding: 2em;
   margin: auto;
+}
+.meteoriteLandings {
   border: dotted 2px;
 }
 
-.MeteoriteLandings {
+.scroll {
   height: 500px;
+  overflow: auto;
 }
-
+.scroll::-webkit-scrollbar {
+  width: 12px;
+}
+.scroll::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgb(6, 13, 107);
+  border-left: dotted 2px;
+}
+.scroll::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgb(248, 248, 88);
+  outline: 2px solid white;
+  -webkit-box-shadow: inset 0 0 6px rgba(248, 248, 88, 1);
+}
 .meteorite {
   padding: 1em;
+}
+.chart {
+  margin: 1em;
+  border: solid 1px;
+  border-color: white;
 }
